--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "zotero-plugin-template",
-  "version": "2.0.2-beta.3",
-  "description": "Zotero Plugin Template",
+  "name": "zotero-llms",
+  "version": "0.0.0",
+  "description": "Zotero LLMs Plugin",
   "config": {
-    "addonName": "Zotero Plugin Template",
-    "addonID": "addontemplate@euclpts.com",
-    "addonRef": "addontemplate",
-    "addonInstance": "AddonTemplate",
-    "prefsPrefix": "extensions.zotero.addontemplate"
+    "addonName": "Zotero LLMs Plugin",
+    "addonID": "neverbiasu@gmail.com",
+    "addonRef": "zotero-llms",
+    "addonInstance": "zotero-llms",
+    "prefsPrefix": "extensions.zotero.${addonRef}"
   },
   "repository": {
     "type": "git",
@@ -31,7 +31,7 @@
     "zotero-plugin-toolkit": "^2.3.37"
   },
   "devDependencies": {
-    "@eslint/js": "^9.3.0",
+    "@eslint/js": "^9.7.0",
     "@types/node": "^20.12.12",
     "eslint": "^9.7.0",
     "prettier": "^3.3.3",
